--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,45 @@
-name: CI
+name: CI/CD
 
 on:
   push:
-    branches: [ dev, master ]
+    branches-ignore: [ master ]
   pull_request:
-    branches: [ dev, master ]
-  workflow_dispatch:
+    branches-ignore: [ master ]
+    types: [ opened ]
 
 jobs:
   build:
+    name: Build and publish debug APK
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
+      - name: Checkout the repo
+        uses: actions/checkout@v3
       - name: Setup java
         uses: actions/setup-java@v3
         with:
           distribution: 'oracle'
           java-version: '17'
-          cache: 'gradle'
-      - name: Build the project
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          cache-read-only: false
+      - name: Execute Gradle build
         run: ./gradlew build
+      - name: Assemble debug APK
+        run: ./gradlew assembleDebug
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+      - run: npm install node-telegram-bot-api
+      - name: Publish debug APK to telegram
+        uses: actions/github-script@v7
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+        with:
+          script: |
+            const script = require('./publish-apk-to-telegram.js')
+            console.log(script({github, context}))
