add env start timestamp

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,10 @@ jobs:
     name: Build and publish debug APK
     runs-on: ubuntu-latest
     steps:
+      - name: Set start timestamp
+        id: start
+        run: |
+          echo "{START_TIMESTAMP}={$(date +%s)}" >> $GITHUB_ENV
       - name: Checkout the repo
         uses: actions/checkout@v3
       - name: Setup java
